kdk-construct/src/test/resources/wtf/metio/kdk/serialize/service/IngressTest/tlsIngressWithSpec.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: test
          servicePort: 8080
  tls:
  - hosts:
    - example.com
    secretName: tls-secret
